# Smart-Support-Agent

./: .env  .env.example  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  __init__.py  cli_test.py  dev-setup.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  restructure.py  setup.bat  setup.py  setup.sh  test_llm.py  update_readme.py
cli/: __init__.py  cli_handler.py  main.py
config/: __init__.py  settings.py
core/: __init__.py
core/agents/: __init__.py  feedback_collector.py  support_agent.py
core/ingestor/: __init__.py  pdf_parser.py  web_scraper.py
core/interface/: __init__.py  input_handler.py  output_handler.py
core/llm/: __init__.py  llm_client.py
core/retriever/: __init__.py  index_builder.py  search_engine.py
data/: faiss_index
factory/: __init__.py  channel_factory.py
tests/: conftest.py  test_channel_factory.py  test_cli.py  test_cli_handlers.py  test_cli_main.py  test_cli_setup.py  test_config.py  test_end_to_end.py  test_feedback_collector.py  test_index_builder.py  test_ingestor_integration.py  test_interface_handlers.py  test_llm_client.py  test_pdf_parser.py  test_search_engine.py  test_support_agent.py  test_web_scraper.py
